# AdventOfCode

2021/: matrix.hpp  my_algorithm.hpp  named.hpp  readinputdata.hpp  small_bitset.hpp  small_bitset_tests.cpp
2021/1/: a.out  main.cpp
2021/10/: main.cpp
2021/11/: main.cpp
2021/12/: graph.hpp  main.cpp
2021/13/: main.cpp
2021/14/: main.cpp
2021/15/: main.cpp
2021/16/: main.cpp
2021/17/: main.cpp
2021/18/: CMakeLists.txt  Pair.hpp  RegularNumber.hpp  SnailFishNumberArithmetic.cpp  SnailFishNumberGenerator.cpp  SnailFishNumberPrint.cpp  SnailFishNumbers.hpp  global.hpp  main.cpp
2021/19/: main.cpp
2021/2/: a.out  main.cpp
2021/3/: a.out  main.cpp
2021/4/: a.out  main.cpp
2021/5/: a.out  main.cpp
2021/6/: a.out  main.cpp
2021/7/: main.cpp
2021/8/: Display.hpp  DisplayMapping.hpp  DisplayResolver.hpp  Display_tests.cpp  Observation.hpp  main.cpp  small_bitset.hpp  small_bitset_tests.cpp
2021/9/: main.cpp
